--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .App {
-  text-align: center;
+  text-align: center;  
+  height: 60em;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+ 
+
+ 
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,15 +17,16 @@
   }
 }
 
-.App-header {
+
+#light{
+
+  background-color: white;
+  color: black;
+}
+#dark{
+  
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: aliceblue;
 }
 
 .App-link {
